--- a/app/src/index.html
+++ b/app/src/index.html
@@ -1,42 +1,53 @@
-<header id="page_header">
-  <nav class="top-nav">
-    <div class="header_left"><a href="/ar-sa" class="language_switch arabic">العربية</a></div>
-    <input id="menu-toggle" type="checkbox" />
-    <label class='menu-button-container' for="menu-toggle">
-      <div class='menu-button'></div>
-    </label>
-    <ul class="menu">
-      <li>One</li>
-      <li>Two</li>
-      <li>Three</li>
-      <li>Four</li>
-      <li>Five</li>
-    </ul>
-  </nav>
-</header>
-<section class="logo">
-  <div class="logo_container">
-    <img src="https://www.fitnesstime.com.sa/assets/images/logo.svg" alt="fitness time logo">
-    <div class="pageTitle">
-      <p class="members_portal"><strong>Members</strong> Portal</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>LogIn</title>
+</head>
+<body>
+  <header id="page_header">
+    <nav class="top-nav">
+      <div class="header_left"><a href="/ar-sa" class="language_switch arabic">العربية</a></div>
+      <input id="menu-toggle" type="checkbox" />
+      <label class='menu-button-container' for="menu-toggle">
+        <div class='menu-button'></div>
+      </label>
+      <ul class="menu">
+        <li>One</li>
+        <li>Two</li>
+        <li>Three</li>
+        <li>Four</li>
+        <li>Five</li>
+      </ul>
+    </nav>
+  </header>
+  <section class="logo">
+    <div class="logo_container">
+      <img src="https://www.fitnesstime.com.sa/assets/images/logo.svg" alt="fitness time logo">
+      <div class="pageTitle">
+        <p class="members_portal"><strong>Members</strong> Portal</p>
+      </div>
     </div>
-  </div>
-</section>
-<section class="login">
-  <div class="login_container">
-    <form>
-      <input type="tel" placeholder="your mobile number" name="phoneNumber" pattern="[0-9]{11}" class="phoneNumber">
-
-      <p>OR</p>
-
-      <input type="text" placeholder="your name" name="username" class="username">
-
-      <input type="password" placeholder="your password" name="password" class="password" required>
-
-      <div class="forgot_pass"><span>I have forgotten my password</span></div>
-
-      <button class="login_btn">Login</button>
-    </form>
-  </div>
-
-</section>
+  </section>
+  <section class="login">
+    <div class="login_container">
+      <form>
+        <input type="tel" placeholder="your mobile number" name="phoneNumber" pattern="[0-9]{11}" class="phoneNumber">
+  
+        <p>OR</p>
+  
+        <input type="text" placeholder="your name" name="username" class="username">
+  
+        <input type="password" placeholder="your password" name="password" class="password" required>
+  
+        <div class="forgot_pass"><span>I have forgotten my password</span></div>
+        <button class="login_btn">Login</button>
+      </form>
+    </div>
+  
+  </section>
+  
+</body>
+</html>
